fix misaligned text

--- a/frontend/style/pause.css
+++ b/frontend/style/pause.css
@@ -57,6 +57,8 @@ h2 {
   font-family: var(--primary-font-family);
   color: var(--accent-color);
   text-transform: uppercase;
+  text-align: center;
+  width: 120px;
   font-weight: bold;
   margin: 0 50px;
   line-height: 1;
@@ -66,7 +68,7 @@ h2 {
   text-transform: uppercase;
   font-weight: bold;
   line-height: 1;
-  width: 155px;
+  width: 140px;
 }
 
 .tag.blue {
